--- a/requirements.txt
+++ b/requirements.txt
@@ -6,8 +6,8 @@ django-debug-toolbar==1.9.1
 django-filter==1.1
 django-registration-redux==1.8
 django-storages-redux==1.3.2
-django-subdomains==2.1.0rc0
 django==1.11.15
 djangorestframework==3.7.1
 flake8==2.6.2
 newrelic==2.98.0.81
+django-hosts==3.0
